AppStore: Fixed reload and create kite button overlap issue. Adding kite button into header facet.

--- a/client/Social/Apps/styl/app.appstore.styl
+++ b/client/Social/Apps/styl/app.appstore.styl
@@ -417,11 +417,9 @@ body.apps
 .apps
   .appstore
     .kite-button
-      abs()
-      right                   92px
-      top                     16px
       height                  28px
       vendor                  rounded, 20px
+      margin-right            6px
 
 .kite-pricing-view
   .kdlabel
